# practice-c-coding-interview-university

./: .gitignore  README.md
arrays/: CMakeLists.txt  copy_string.c  main.c  pascaltriangle.c  power_of_two.c  printprime.c  remove_duplicates_from_sorted_array.c  vector.c  vector.h
arrays/test/: CMakeLists.txt  vector_test.cpp
binary_search/: CMakeLists.txt  binary_search.c  binary_search.h
binary_search/test/: CMakeLists.txt  test.cpp
hash_table/: CMakeLists.txt  hash_table.c  hash_table.h
hash_table/test/: CMakeLists.txt  test.cpp
linked_list/: CMakeLists.txt  linked_list.c  linked_list.h
linked_list/test/: CMakeLists.txt  test.cpp
linked_lists/: CMakeLists.txt  linked_lists.c  linked_lists.h
linked_lists/test/: CMakeLists.txt  test.cpp
queue_array/: CMakeLists.txt  circular_queue.c  circular_queue.h
queue_array/test/: CMakeLists.txt  test.cpp
queue_linked_list/: CMakeLists.txt  main.c  queue.c  queue.h
queue_linked_list/test/: CMakeLists.txt  test.cpp
